// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepperVertical render with all steps completed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 1
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 2
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 3
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`StepperVertical renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 1
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 text-green"
        >
          <svg
            class="PicassoSvgCheckSolid24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
            />
          </svg>
        </div>
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 2
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 bg-blue text-white"
        />
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 3
        </span>
      </div>
      <div
        class="h-4"
      />
      <div
        class="flex flex-row items-center gap-2"
      >
        <div
          class="h-[1.5em] w-[1.5em] flex justify-center items-center rounded-[50%] shrink-0 bg-white border border-gray border-solid"
        />
        <span
          class="m-0 text-2xs text-graphite font-semibold"
        >
          Step 4
        </span>
      </div>
    </div>
  </div>
</div>
`;
